--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DeleteUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DeleteUsuario.razor
@@ -4,15 +4,15 @@
 @using DataBase.Modelo
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
-@inject ITenantProvider TenantProvider
-@inject IContextKeyProvider ContextKeyProvider
+
+@inject IContextProvider ContextProvider
 @inject NavigationManager nav
 @implements IDisposable
 
 
-<h3>DetalleUsuario</h3>
-<p>Usuarios del tenant <strong>@TenantProvider.CurrentTenantId</strong>:</p>
-<p>Usuarios del contexto <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
+<p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
+<p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
+<p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
 
 @if (NewUser != null)
 {
@@ -90,49 +90,30 @@
     public int Id { get; set; }
 
     private Usuario NewUser = new Usuario();
-    int TenantId;
-    string Contexto = "SqlServer";
-
 
     bool displayValidationErrorMessages = false;
     bool displayUserAddedToDB = false;
 
-    private Func<Task>? _onTenantChangedHandler;
-    private Func<Task>? _onContextKeyChangedHandler;
+
 
 
     protected override async Task OnInitializedAsync()
     {
-
-        TenantId = TenantProvider.CurrentTenantId ?? 0;
-        _onTenantChangedHandler += async () =>
-       {
-           await CargarAsync();
-           StateHasChanged();
-       };
-
-        _onContextKeyChangedHandler += async () =>
-        {
-            await CargarAsync();
-            StateHasChanged();
-        };
-
-        TenantProvider.OnTenantChanged += _onTenantChangedHandler;
-        ContextKeyProvider.OnContextKeyChanged += _onTenantChangedHandler;
         await CargarAsync();
+        StateHasChanged();
     }
 
     private async Task HandleValidSubmit(EditContext context)
     {
         displayValidationErrorMessages = false;
         displayUserAddedToDB = true;
-        var servicioUsuario = new ServicioUsuarios(ContextKeyProvider, UnitOfWorkFactory, TenantProvider);
+        var servicioUsuario = new ServicioUsuarios(ContextProvider, UnitOfWorkFactory);
         if (Id != 0)
             servicioUsuario.DeleteAsync(Id);
 
         nav.NavigateTo("javascript:history.back()");
 
-      //  nav.NavigateTo("/ListaUsuarios");
+        //  nav.NavigateTo("/ListaUsuarios");
     }
 
 
@@ -144,20 +125,20 @@
     }
 
 
-   
+
     private async Task CargarAsync()
     {
         try
         {
             if (Id != 0)
             {
-                var servicioUsuario = new ServicioUsuarios(ContextKeyProvider, UnitOfWorkFactory, TenantProvider);
+                var servicioUsuario = new ServicioUsuarios(ContextProvider, UnitOfWorkFactory);
                 NewUser = await servicioUsuario.GetByIdAsync(Id);
             }
             else 
             {
                 NewUser = new Usuario();
-                NewUser.TenantId = TenantId;
+                NewUser.TenantId = ContextProvider.TenantId;
             }
 
         }
@@ -177,20 +158,14 @@
         nav.NavigateTo("javascript:history.back()");
     }
 
-    private async void OnTenantChanged(ChangeEventArgs e)
-    {
-        var _t = int.Parse((e.Value as string) ?? "0");
-        TenantProvider.SetTenant(_t);
-    
-    }
+   
     void IDisposable.Dispose()
     {
         Dispose();
     }
     private void Dispose()
     {
-        TenantProvider.OnTenantChanged -= _onTenantChangedHandler;
-        ContextKeyProvider.OnContextKeyChanged -= _onContextKeyChangedHandler;
+
 
     }
 }
