--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
@@ -49,52 +49,16 @@
             </NavLink>
         </div>
 
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="DetalleUsuario">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Añadir
-            </NavLink>
-        </div>
+        @foreach (var item in GetVisibleItems())
+        {
+             <div class="nav-item ">
+                <NavLink class="nav-link" href="@item.Url">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> @item.Text
+                </NavLink>
+            </div>
+        }
 
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-
-  
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="ListaUsuarios">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista
-            </NavLink>
-        </div>
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="ListaUsuariosApi">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ListaApi
-            </NavLink>
-        </div>
-
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="ListaUsuariosMultipleContext">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleContext
-            </NavLink>
-        </div>
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="ListaUsuariosMultipleTenant">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleTenant
-            </NavLink>
-        </div>
-        
-
-            <div class="nav-item ">
-                <NavLink class="nav-link" href="ListaUsuariosCliente">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Cliente
-            </NavLink>
-        </div>
-        <div class="nav-item ">
-            <NavLink class="nav-link" href="Counter">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Counter Cliente
-            </NavLink>
-        </div>
+       
         
     </nav>
     
@@ -104,12 +68,45 @@
     string ContextKey = "SqLite";
     string ApiName = "ApiRest";
     string Mode = "Ef";
+    private bool IsClient => OperatingSystem.IsBrowser();
+    private bool IsServer => !OperatingSystem.IsBrowser();
 
 
     private async Task Actualizar()
     {
         ContextProvider.SetContext(TenantId,ContextKey,ApiName,ContextProvider.DirBase,Mode);
          
+    }
+
+    public enum MenuTarget
+    {
+        Server,
+        Client,
+        Both
+    }
+    public record MenuItem(string Text, string Url, MenuTarget Target);
+    private static readonly List<MenuItem> Items =
+    [
+  
+        new("Lista  Context/Tenant (server)", "/ListaUsuarios", MenuTarget.Both),
+        new("Lista  Fijo-Api (server)", "/ListaUsuariosApi", MenuTarget.Server),
+        new("Lista  Multiple Context (server)", "/ListaUsuariosMultipleContext", MenuTarget.Server),
+         new("Lista Multiple Tenant (server)", "/ListaUsuariosMultipleTenant", MenuTarget.Server),
+         new("Detalle (server)", "/DetalleUsuario", MenuTarget.Server),
+         new("Delete (server)", "/DeleteUsuario", MenuTarget.Server),
+         new("Weather (server)", "/Weather", MenuTarget.Server),
+        new("Lista  Fijos WASM", "/ListaUsuariosCliente", MenuTarget.Both),
+        new("Delete WASM", "/DeleteUsuarioCliente", MenuTarget.Server),
+        new("Detalle WASM", "/DetalleUsuarioCliente", MenuTarget.Server),
+        new("Counter WASM", "/Counter", MenuTarget.Server)
+    ];
+
+    private IEnumerable<MenuItem> GetVisibleItems()
+    {
+        if (IsClient)
+            return Items.Where(i => i.Target is MenuTarget.Client or MenuTarget.Both);
+
+        return Items.Where(i => i.Target is MenuTarget.Server or MenuTarget.Both);
     }
 
     }
