--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/ListaUsuariosCliente.razor
@@ -1,17 +1,17 @@
 ﻿@page "/ListaUsuariosCliente"
-@rendermode InteractiveWebAssembly
+@rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 
 @using DataBase.Genericos
 @using DataBase.Modelo
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UowFactory
 @inject IContextProvider ContextProvider
-@inject HttpClient Http
+
 @inject NavigationManager nav
 @implements IDisposable
 
 
-<h3>Listado de usuarios Especifica Cliente</h3>
+<h3>Listado de usuarios CLIENTE</h3>
 
 
 
@@ -22,8 +22,16 @@
 else
 {
     <p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
+
+
+    <p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
     <p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
-    <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+    <p>Mode <strong>@ContextProvider.ConnectionMode</strong>:</p>
+    @if (@ContextProvider.ConnectionMode != "Ef")
+    {
+        <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+    }
+
 
 @if (usuarios is null)
 {
@@ -58,8 +66,8 @@ else
                         <td>@user.Password</td>
                         <td>@user.email</td>
                         <td>@user.TenantId</td>
-                        <td><a href="DetalleUsuario/@user.Id"><i>Edit</i></a></td>
-                        <td><a href="DeteteUsuario/@user.Id"><i>Del</i></a></td>
+                        <td><a href="DetalleUsuarioCliente/@user.Id"><i>Edit</i></a></td>
+                        <td><a href="DeteteUsuarioCliente/@user.Id"><i>Del</i></a></td>
                     </tr>
                 }
             </tbody>
@@ -73,7 +81,7 @@ else
     int TenantId;
     string ContextoKey ="";
 
-    
+
     private Func<Task>? _onContextChangedHandler;
 
     private GenericDataService<Usuario> usuarioService;
@@ -87,7 +95,7 @@ else
             StateHasChanged();
         };
 
-  
+
         ContextProvider.OnContextChanged += _onContextChangedHandler;
         await CargarAsync();
     }
@@ -96,14 +104,18 @@ else
     {
         try
         {
-          
-        
+
+
             IContextProvider cp = ContextProvider.Copia();
-            cp.ConnectionMode = "ApiClient";
+            cp.ConnectionMode = "Api";
 
             usuarioService = new ServicioUsuarios(cp, UowFactory);
             var list = await usuarioService.GetAllAsync();
             usuarios = list.ToList();
+
+            usuarioService = new ServicioUsuarios(cp, UowFactory);
+            var list2 = await usuarioService.GetAllAsync();
+            usuarios.AddRange(list2.ToList()); ;
 
 
         }
