--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuarios.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuarios.razor
@@ -11,12 +11,16 @@
 @implements IDisposable
 
 
-<h3>Listado de usuarios (Genérico)</h3>
+<h3>Listado de usuarios  (Genérico)</h3>
 
 
 <p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
 <p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
-<p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+<p>Mode <strong>@ContextProvider.ConnectionMode</strong>:</p>
+@if (@ContextProvider.ConnectionMode != "Ef")
+{
+    <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+}
 
 
 @if (usuarios is null)
