--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/Home.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/Home.razor
@@ -1,7 +1,68 @@
 ﻿@page "/"
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 
-<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+@using DataBase
+@using DataBase.Genericos
+@using DataBase.Modelo
+@using DataBase.Servicios
+@inject IUnitOfWorkFactory UowFactory
+@inject IContextProvider ContextProvider
+@inject ITokenService TokenService
 
-Welcome to your new app.
+@inject NavigationManager nav
+
+
+
+
+
+<h3>Login para obtener token JWT  desde el cliente</h3>
+
+<div>
+    <input @bind="username" placeholder="Usuario" />
+    <input @bind="password" placeholder="Password" />
+</div>
+
+<button @onclick="LoginAsync">Acceder</button>
+
+
+
+@code {
+    string username = "";
+    string password = "";
+    string token = "";
+    string tokenCookie = "";
+
+    string protectedApiResponse = "";
+    string protectedApiResponseCookie = "";
+
+    ServicioSeguridad scUsuario;
+
+
+    protected override async Task OnInitializedAsync()
+    {
+        await ContextProvider.ReadContext();
+
+    }
+
+
+    async Task LoginAsync()
+    {
+        scUsuario = new ServicioSeguridad(ContextProvider, UowFactory,TokenService);
+
+         string filtro = $"UserName == \"{username}\" && Password == \"{password}\"";
+
+
+         var list = await scUsuario.GetFilterAsync(filtro );
+        if (list !=null && list.Count()>0)
+        {
+            var user = list.First();
+            token =  scUsuario.LoginAndGetTokenAsync(user);
+            ContextProvider.Token = token;
+            ContextProvider.SaveContext();
+        }
+    }
+
+   
+}
+
